Major refactoring for version 0.2

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-pyvenv.cfg
-Include
-Lib
-Scripts
-__pycache__
+*.egg-info
 *.pyc
+.cache
+.externalToolBuilders
+.idea
 .project
 .pydevproject
-.tox
 .settings
-*.egg-info
-docs/_build
-.externalToolBuilders
+.tox
+__pycache__
 dist
+docs/_build
+Include
+Lib
+pyvenv.cfg
+Scripts
