--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,8 @@ environment:
   - PYTHON: C:\Python34-x64
   - PYTHON: C:\Python35
   - PYTHON: C:\Python35-x64
+  - PYTHON: C:\Python36
+  - PYTHON: C:\Python36-x64
 install:
 - cmd: >-
     SET PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
