--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: python
 python:
- - "3.2"
- - "3.3"
  - "3.4"
  - "3.5"
  - "3.6"
 
-script: python setup.py test
+install:
+ - "pip install -r test-requirements.txt"
+
+script:
+ - "python setup.py test"
 
