--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
-group: "deprecated-2017Q4"
+
 python:
  - "3.4"
  - "3.5"
  - "3.6"
+
+ before_install:
+  - "ip addr show",
+  - "ls /proc/net",
+  - "cat /proc/net/if_inet6"
 
 install:
  - "pip install -r test-requirements.txt"
