--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: python
 
-sudo: required
-
 python:
  - "3.4"
  - "3.5"
  - "3.6"
 
-before_install:
- - "ip addr show"
- - "ls /proc/net"
- - "cat /proc/net/if_inet6"
+before_script:
+ - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+     sudo sh -c 'echo 0 > /proc/sys/net/ipv6/conf/all/disable_ipv6';
+   fi
 
 install:
  - "pip install -r test-requirements.txt"
