--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ install:
 
     python -c "import struct; print(struct.calcsize('P') * 8)"
 
-    pip install --disable-pip-version-check --user --upgrade pip
+    python -m pip install --disable-pip-version-check --user --upgrade pip
 
     pip install -r test-requirements.txt
 build: off
