--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,18 @@
-version: 1.0.{build}
-init:
-- ps: ECHO $env:PYTHON
 environment:
   matrix:
-  - PYTHON: C:\Python34
-  - PYTHON: C:\Python34-x64
-  - PYTHON: C:\Python35
-  - PYTHON: C:\Python35-x64
-  - PYTHON: C:\Python36
-  - PYTHON: C:\Python36-x64
-install:
-- cmd: >-
-    SET PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
+    - TOXENV: py34
+    - TOXENV: py35
+    - TOXENV: py36
+    - TOXENV: py37
+    - TOXENV: py38
 
-    python --version
-
-    python -c "import struct; print(struct.calcsize('P') * 8)"
-
-    python -m pip install --disable-pip-version-check --user --upgrade pip
-
-    pip install -r test-requirements.txt
 build: off
+
+install:
+  - python --version
+  - python -c "import struct; print(struct.calcsize('P') * 8)"
+  - python -m pip install --upgrade pip setuptools
+  - pip install tox
+
 test_script:
-- cmd: python setup.py test
+  - tox
