--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,51 @@
 environment:
   matrix:
+    # Python 3.4, 64-bit
     - TOXENV: py34
+      TOX_APPVEYOR_X64: 1
+
+    # Python 3.4, 32-bit
+    - TOXENV: py34
+      TOX_APPVEYOR_X64: 0
+
+    # Python 3.5, 64-bit
     - TOXENV: py35
+      TOX_APPVEYOR_X64: 1
+
+    # Python 3.5, 32-bit
+    - TOXENV: py35
+      TOX_APPVEYOR_X64: 0
+
+    # Python 3.6, 64-bit
     - TOXENV: py36
+      TOX_APPVEYOR_X64: 1
+
+    # Python 3.6, 32-bit
+    - TOXENV: py36
+      TOX_APPVEYOR_X64: 0
+
+    # Python 3.7, 64-bit
     - TOXENV: py37
+      TOX_APPVEYOR_X64: 1
+
+    # Python 3.7, 32-bit
+    - TOXENV: py37
+      TOX_APPVEYOR_X64: 0
+
+    # Python 3.8, 64-bit
     - TOXENV: py38
+      TOX_APPVEYOR_X64: 1
+
+    # Python 3.8, 32-bit
+    - TOXENV: py38
+      TOX_APPVEYOR_X64: 0
+
 
 build: off
 
 install:
-  - python --version
-  - python -c "import struct; print(struct.calcsize('P') * 8)"
-  - python -m pip install --upgrade pip setuptools
-  - pip install tox
+  - py -3.6 -m pip install --upgrade pip setuptools
+  - py -3.6 -m pip install wheel tox tox-appveyor
 
 test_script:
   - tox
