--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,7 +46,7 @@ build: off
 install:
   - py -3.6 -m pip install --upgrade pip setuptools
   - py -3.6 -m pip install wheel tox tox-appveyor
-  - py -3.6 -m pip install -r test_requirements.txt
+  - py -3.6 -m pip install -r test-requirements.txt
 
 test_script:
   - py -3.6 -m tox
