--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,7 @@ envlist = py{34,35,36,37,38}
 
 [testenv]
 description = Unit tests
-deps = pytest
+deps =
+    pytest
+    pytest-mock
 commands = pytest
