--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ build: off
 
 install:
   - py -3.8 -m pip install --upgrade pip setuptools
-  - pip install tox
+  - py -3.8 -m pip install tox
 
 test_script:
   - tox
