--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,9 @@ build: off
 
 install:
   - python --version
+  - python -c "import struct; print(struct.calcsize('P') * 8)"
   - python -m pip install --upgrade pip setuptools
-  - pip install tox'
+  - pip install tox
 
 test_script:
-  - tox
+  - python -m tox
