--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ environment:
 build: off
 
 install:
-  - python --version
+  - python -VV
   - python -c "import struct; print(struct.calcsize('P') * 8)"
   - python -m pip install --upgrade pip setuptools
   - pip install tox
