--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,10 +28,10 @@ image:
 build: off
 
 install:
-  - python -VV
-  - python -c "import struct; print(struct.calcsize('P') * 8)"
-  - python -m pip install --upgrade pip setuptools
-  - pip install tox
+  - python3 -VV
+  - python3 -c "import struct; print(struct.calcsize('P') * 8)"
+  - python3 -m pip install --upgrade pip setuptools
+  - pip3 install tox
 
 test_script:
-  - python -m tox
+  - python3 -m tox
