--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ environment:
     - TOXENV: py38
       PYTHON_VERSION: 3.8
 
-stack: python 3.8
+stack: python %PYTHON_VERSION%
 
 build: off
 
@@ -28,7 +28,7 @@ install:
   - cmd: pip install tox
   - sh: python -VV
   - sh: python -c "import struct; print(struct.calcsize('P') * 8)"
-  - sh: pip install tox
+  - sh: python3.8 -m pip install tox
   - sh: PATH=/home/appveyor/.local/bin:${PATH}
 
 test_script:
