Try Ubuntu build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ image:
   - Visual Studio 2015
   - Ubuntu
 
+platform:
+  - x86
+  - x64
 
 environment:
   matrix:
@@ -22,7 +25,7 @@ install:
   - cmd: set PATH=C:\Python38-x64;C:\Python38-x64\Scripts;%PATH%
   - cmd: python -VV
   - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
-  - cmd: python -m pip install --upgrade pip setuptools
+#  - cmd: python -m pip install --upgrade pip setuptools
   - cmd: pip install tox
   - sh: python -VV
   - sh: python -c "import struct; print(struct.calcsize('P') * 8)"
