Try Ubuntu build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,19 +24,20 @@ stack: python %PYTHON_VERSION%
 build: off
 
 test_script:
+  # Windows. Both 32 and 64 bit Python versions
   - cmd: set OLDPATH=%PATH%
   - cmd: set PATH=%WINDOWS_PYTHON_PATH%;%WINDOWS_PYTHON_PATH%\Scripts;%OLDPATH%
-  - cmd: echo %PATH%
   - cmd: python -VV
   - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
   - cmd: python -m pip install tox
   - cmd: python -m tox
   - cmd: set PATH=%WINDOWS_PYTHON_PATH%-x64;%WINDOWS_PYTHON_PATH%-x64\Scripts;%OLDPATH%
-  - cmd: echo %PATH%
   - cmd: python -VV
   - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
   - cmd: python -m pip install tox
   - cmd: python -m tox
+
+  # Linux and Mac
   - sh: python -VV
   - sh: python -c "import struct; print(struct.calcsize('P') * 8)"
   - sh: pip install tox
