--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: python
 
-python:
- - "3.4"
- - "3.5"
- - "3.6"
- - "3.7"
- - "3.8"
+matrix:
+  include:
+    - python: 3.5
+      env: TOXENV=py35
+    - python: 3.6
+      env: TOXENV=py36
+    - python: 3.7
+      env: TOXENV=py37
+    - python: 3.8
+      env: TOXENV=py38
 
 before_script:
  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
@@ -13,8 +17,8 @@ before_script:
    fi
 
 install:
- - "pip install -r test-requirements.txt"
+ - pip install tox
 
 script:
- - "python setup.py test"
+ - tox
 
