--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,23 @@
 language: python
 
-matrix:
-  include:
-    - python: 3.5
-      env: TOXENV=py35
-    - python: 3.6
-      env: TOXENV=py36
-    - python: 3.7
-      env: TOXENV=py37
-    - python: 3.8
-      env: TOXENV=py38
+python:
+  - 3.5
+  - 3.6
+  - 3.7
+  - 3.8
 
 before_script:
  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
      sudo sh -c 'echo 0 > /proc/sys/net/ipv6/conf/all/disable_ipv6';
    fi
 
+before_install:
+  - python --version
+  - pip install -U pip
+
 install:
- - pip install tox
+ - pip install .[test]
 
 script:
- - tox
+ - pytest
 
