Added pytest-cov and coverage dependencies to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -10,4 +10,6 @@ envlist = py{35,36,37,38}
 description = Unit tests
 deps = pytest
        pytest-mock
+       pytest-cov
+       coverage
 commands = pytest
