--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,17 +5,13 @@ image:
 
 environment:
   matrix:
-    - TOXENV: py35
-      PYTHON_VERSION: 3.5
+    - PYTHON_VERSION: 3.5
       WINDOWS_PYTHON_PATH: C:\Python35
-    - TOXENV: py36
-      PYTHON_VERSION: 3.6
+    - PYTHON_VERSION: 3.6
       WINDOWS_PYTHON_PATH: C:\Python36
-    - TOXENV: py37
-      PYTHON_VERSION: 3.7
+    - PYTHON_VERSION: 3.7
       WINDOWS_PYTHON_PATH: C:\Python37
-    - TOXENV: py38
-      PYTHON_VERSION: 3.8
+    - PYTHON_VERSION: 3.8
       WINDOWS_PYTHON_PATH: C:\Python38
 
 
@@ -29,17 +25,17 @@ test_script:
   - cmd: set PATH=%WINDOWS_PYTHON_PATH%;%WINDOWS_PYTHON_PATH%\Scripts;%OLDPATH%
   - cmd: python -VV
   - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
-  - cmd: python -m pip install tox
-  - cmd: python -m tox
+  - cmd: python -m pip install .[test]
+  - cmd: python -m pytest
   - cmd: set PATH=%WINDOWS_PYTHON_PATH%-x64;%WINDOWS_PYTHON_PATH%-x64\Scripts;%OLDPATH%
   - cmd: python -VV
   - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
-  - cmd: python -m pip install tox
-  - cmd: python -m tox
+  - cmd: python -m pip install .[test]
+  - cmd: python -m pytest
 
   # Linux and Mac
   - sh: python -VV
   - sh: python -c "import struct; print(struct.calcsize('P') * 8)"
-  - sh: pip install tox
+  - sh: pip install .[test]
   - sh: PATH=/home/appveyor/.local/bin:${PATH}
-  - sh: tox
+  - sh: pytest
