Issue/10/py pa best practices (#13)
* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Adapted build matrix for AppVeyor

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Try Ubuntu build

* Updated travis.yml

* Moved sliplib under src directory

* Changed Appveyor windows environment

* Investigate AppVeyor test failure for Python3.7 64-bit

* Restore original tests

* Fixed error in testing of delegated slipsocket methods.

* Updated travis script. Used explicit pytest testing

* Added pytest-cov and coverage dependencies to tox.ini

* Added pytest-mock to test requirements

* Use pytest i.s.o. tox on appveyor

* Uninstall package between windows 32-bit and 64-bit runs on AppVeyor

* Repaired strange error on AppVeyor for 64-bit Python 3.5 on Windows

* Repaired strange error on AppVeyor for 64-bit Python 3.5 on Windows, temporarily added debug print statements

* Repaired strange error on AppVeyor for 64-bit Python 3.5 on Windows, temporarily added debug print statements

* Repaired strange error on AppVeyor for 64-bit Python 3.5 on Windows, temporarily added debug print statements

* Repaired strange error on AppVeyor for 64-bit Py

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{34,35,36,37,38}
+envlist = py{35,36,37,38}
 
 [testenv]
 description = Unit tests
-deps =
-    pytest
-    pytest-mock
+deps = pytest
+       pytest-mock
+       pytest-cov
+       coverage
 commands = pytest
