--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,52 +1,62 @@
+image:
+  - Visual Studio 2019
+  - Ubuntu
+  - macOS
+
+platform:
+  - x86
+  - x64
+
 environment:
   matrix:
-    # Python 3.4, 64-bit
-    - TOXENV: py34
-      TOX_APPVEYOR_X64: 1
+    - PYTHON_VERSION: 3.5
+      PYTHON_BUILD: ''
+    - PYTHON_VERSION: 3.5
+      PYTHON_BUILD: '-x64'
+    - PYTHON_VERSION: 3.6
+      PYTHON_BUILD: ''
+    - PYTHON_VERSION: 3.6
+      PYTHON_BUILD: '-x64'
+    - PYTHON_VERSION: 3.7
+      PYTHON_BUILD: ''
+    - PYTHON_VERSION: 3.7
+      PYTHON_BUILD: '-x64'
+    - PYTHON_VERSION: 3.8
+      PYTHON_BUILD: ''
+    - PYTHON_VERSION: 3.8
+      PYTHON_BUILD: '-x64'
 
-    # Python 3.4, 32-bit
-    - TOXENV: py34
-      TOX_APPVEYOR_X64: 0
+matrix:
+  exclude:
+    - platform: x86
+      PYTHON_BUILD: '-x64'
+    - image: Ubuntu
+      platform: x86
+    - image: Ubuntu
+      platform: x64
+      PYTHON_BUILD: ''
+    - image: macOS
+      platform: x86
+    - image: macOS
+      platform: x64
+      PYTHON_BUILD: ''
 
-    # Python 3.5, 64-bit
-    - TOXENV: py35
-      TOX_APPVEYOR_X64: 1
-
-    # Python 3.5, 32-bit
-    - TOXENV: py35
-      TOX_APPVEYOR_X64: 0
-
-    # Python 3.6, 64-bit
-    - TOXENV: py36
-      TOX_APPVEYOR_X64: 1
-
-    # Python 3.6, 32-bit
-    - TOXENV: py36
-      TOX_APPVEYOR_X64: 0
-
-    # Python 3.7, 64-bit
-    - TOXENV: py37
-      TOX_APPVEYOR_X64: 1
-
-    # Python 3.7, 32-bit
-    - TOXENV: py37
-      TOX_APPVEYOR_X64: 0
-
-    # Python 3.8, 64-bit
-    - TOXENV: py38
-      TOX_APPVEYOR_X64: 1
-
-    # Python 3.8, 32-bit
-    - TOXENV: py38
-      TOX_APPVEYOR_X64: 0
-
+stack: python %PYTHON_VERSION%
 
 build: off
 
-install:
-  - py -3.6 -m pip install --upgrade pip setuptools
-  - py -3.6 -m pip install wheel tox tox-appveyor
-  - py -3.6 -m pip install -r test-requirements.txt
-
 test_script:
-  - py -3.6 -m tox
+  # Windows. Both 32 and 64 bit Python versions
+  - cmd: set PYTHON_PATH=C:\PYTHON%PYTHON_VERSION:.=%%PYTHON_BUILD%
+  - cmd: set PATH=%PYTHON_PATH%;%PYTHON_PATH%\Scripts;%PATH%
+  - cmd: python -VV
+  - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
+  - cmd: python -m pip install .[test]
+  - cmd: python -m pytest
+
+  # Linux and Mac
+  - sh: python -VV
+  - sh: python -c "import struct; print(struct.calcsize('P') * 8)"
+  - sh: pip install .[test]
+  - sh: PATH=/home/appveyor/.local/bin:${PATH}
+  - sh: pytest
