--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,23 @@
 language: python
 
 python:
- - "3.4"
- - "3.5"
- - "3.6"
+  - 3.5
+  - 3.6
+  - 3.7
+  - 3.8
 
 before_script:
  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
      sudo sh -c 'echo 0 > /proc/sys/net/ipv6/conf/all/disable_ipv6';
    fi
 
+before_install:
+  - python --version
+  - pip install -U pip
+
 install:
- - "pip install -r test-requirements.txt"
+ - pip install .[test]
 
 script:
- - "python setup.py test"
+ - pytest
 
