--- a/tox.ini
+++ b/tox.ini
@@ -4,18 +4,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py32, py33, py34
+envlist = py{35,36,37,38}
 
 [testenv]
+description = Unit tests
 deps = pytest
-commands = py.test --resultlog={envdir}/log/test.log
-basepython =
-	py26:   {homedir}/py/python2.6/bin/python
-	py27:   {homedir}/py/python2.7/bin/python
-	py31:   {homedir}/py/python3.1/bin/python
-	py32:   {homedir}/py/python3.2/bin/python
-	py33:   {homedir}/py/python3.3/bin/python
-	py34:   {homedir}/py/python3.4/bin/python
-	jython: {homedir}/py/jython/bin/python
-	pypy:   {homedir}/py/pypy/bin/python
-	pypy3:  {homedir}/py/pypy3/bin/python
+       pytest-mock
+       pytest-cov
+       coverage
+commands = pytest
