Issue/16/allow unbuffered io stream for slip stream (#22)
Allow unbuffered byte streams for a SlipStream

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
 *.egg-info
 *.pyc
 .cache
+.coverage
 .externalToolBuilders
 .idea
+.mypy_cache
 .project
 .pydevproject
+.pytest_cache
 .settings
 .tox
 __pycache__
+build
 dist
+env
 docs/_build
 Include
 Lib
 pyvenv.cfg
 Scripts
-.mypy_cache/
+venv
