Rearranged documentation. Added typehints. Added pylint and mypy checking.

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,6 @@ envlist = py{35,36,37,38}
 
 [testenv]
 description = Unit tests
-deps = pytest
-       pytest-mock
-       pytest-cov
-       coverage
+deps = .[test]
 commands = pytest
+    mypy src examples tests
