Corrected mypy command for AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,7 +53,7 @@ test_script:
   - cmd: python -c "import struct; print(struct.calcsize('P') * 8)"
   - cmd: python -m pip install .[test]
   - cmd: python -m pytest
-  - cmd: python -m mypy
+  - cmd: python -m mypy examples src tests
 
   # Linux and Mac
   - sh: python -VV
@@ -61,4 +61,4 @@ test_script:
   - sh: pip install .[test]
   - sh: PATH=/home/appveyor/.local/bin:${PATH}
   - sh: pytest
-  - sh: mypy
+  - sh: mypy examples src tests
