--- a/.travis.yml
+++ b/.travis.yml
@@ -2,29 +2,31 @@ os:
   - linux
   - osx
 
-language: python
-
-python:
-  - 3.5
-  - 3.6
-  - 3.7
-  - 3.8
-
 matrix:
   include:
     - os: linux
       language: python
-    - os: osx
       python: 3.5
+    - os: linux
+      language: python
+      python: 3.6
+    - os: linux
+      language: python
+      python: 3.7
+    - os: linux
+      language: python
+      python: 3.8
+    - os: osx
+      language: generic
       env: PYTHON=35
     - os: osx
-      python: 3.6
+      language: generic
       env: PYTHON=36
     - os: osx
-      python: 3.7
+      language: generic
       env: PYTHON=37
     - os: osx
-      python: 3.8
+      language: generic
       env: PYTHON=38
 
 before_script:
@@ -47,7 +49,12 @@ before_install:
   - pip --version
 
 install:
- - pip install --user .[test]
+  - if [ "{TRAVIS_OS_NAME}" == "osx" ]; then
+      pip install --user .[test]
+    else
+      pip install .[test]
+    fi
+
 
 script:
  - pytest
