--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_install:
   - pip --version
 
 install:
-  - if [ "{TRAVIS_OS_NAME}" == "osx" ]; then
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then
       pip install --user .[test];
     else
       pip install .[test];
