Removed mypy messages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
 [tool.hatch.envs.types]
 dependencies = [
     "pytest",
+    "pytest-mock",
     "mypy>=1.0.0",
 ]
 [tool.hatch.envs.types.scripts]
