--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,5 +118,8 @@ dependencies = [
     "sphinx_rtd_theme",
 ]
 
+[tool.hatch.envs.doc.scripts]
+build = "cd {root}/docs && make {args:html}"
+
 [tool.isort]
 profile = "black"
