--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,13 +35,21 @@ dependencies = []
 path = "src/sliplib/version.py"
 
 [tool.hatch.envs.default]
+python = "3.12"
 dependencies = [
-    "coverage[toml]>=6.5",
     "pytest",
     "pytest-mock",
 ]
 
-[tool.hatch.envs.default.scripts]
+[[tool.hatch.envs.test.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+
+[tool.hatch.envs.test]
+extra-dependencies = [
+    "coverage[toml]>=6.5",
+]
+
+[tool.hatch.envs.test.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
 cov-report = [
@@ -53,18 +61,17 @@ cov = [
     "cov-report",
 ]
 
-[[tool.hatch.envs.all.matrix]]
+[[tool.hatch.envs.types.matrix]]
 python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
 [tool.hatch.envs.types]
-dependencies = [
-    "pytest",
-    "pytest-mock",
+extra-dependencies = [
     "mypy>=1.0.0",
+    "typing_extensions"
 ]
 
 [tool.hatch.envs.types.scripts]
-check = "mypy --strict --install-types --non-interactive {args:src/sliplib tests}"
+check = "mypy --strict --install-types --non-interactive {args:src tests examples}"
 
 [tool.hatch.envs.style]
 dependencies = [
@@ -73,10 +80,10 @@ dependencies = [
 ]
 
 [tool.hatch.envs.style.scripts]
-isort-check = "isort --check-only {args:src tests}"
-black-check = "black --check {args:src tests}"
-isort-fix = "isort {args:src tests}"
-black-fix = "black {args:src tests}"
+isort-check = "isort --check-only {args:src tests examples docs}"
+black-check = "black --check {args:src tests examples docs}"
+isort-fix = "isort {args:src tests examples docs}"
+black-fix = "black {args:src tests examples docs}"
 check = [
     "- isort-check",
     "black-check",
@@ -116,10 +123,18 @@ python = "3.12"
 dependencies = [
     "sphinx",
     "sphinx_rtd_theme",
+    "sphinx-toolbox",
 ]
 
 [tool.hatch.envs.doc.scripts]
 build = "cd {root}/docs && make {args:html}"
 
+[tool.black]
+line-length = 120
+
 [tool.isort]
 profile = "black"
+line_length = 120
+
+[tool.ruff]
+target-version = "py312"
