--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ cov = [
     "cov-report",
 ]
 
+[[tool.hatch.envs.types.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+
 [tool.hatch.envs.types]
 extra-dependencies = [
     "mypy>=1.0.0",
