--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ cov = [
 python = "3.12"
 extra-dependencies = [
     "mypy>=1.0.0",
-    "typing_extensions"
+    "typing_extensions",
 ]
 
 [tool.hatch.envs.types.scripts]
@@ -105,8 +105,8 @@ omit = [
 ]
 
 [tool.coverage.paths]
-sliplib = ["src/sliplib", "*/SlipLib/src/sliplib"]
-tests = ["tests", "*/SlipLib/tests"]
+sliplib = ["src/sliplib"]
+tests = ["tests"]
 
 [tool.coverage.report]
 show_missing = true
