--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
 ]
+fail_under = 100
 
 [tool.hatch.build.targets.sdist]
 include = [
