31 get 100 % test coverage (#38)
* Removed mypy matrix. Simplified tests, got 100 % coverage

* Extended test scripts to get 100 % coverage

* Make CI fail if coverage is less than 100

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ python = "3.12"
 dependencies = [
     "pytest",
     "pytest-mock",
+    "semantic-version-check",
 ]
 
 [[tool.hatch.envs.test.matrix]]
@@ -61,13 +62,11 @@ cov = [
     "cov-report",
 ]
 
-[[tool.hatch.envs.types.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
 [tool.hatch.envs.types]
+python = "3.12"
 extra-dependencies = [
     "mypy>=1.0.0",
-    "typing_extensions"
+    "typing_extensions",
 ]
 
 [tool.hatch.envs.types.scripts]
@@ -97,13 +96,17 @@ fix = [
 source_pkgs = ["sliplib", "tests"]
 branch = true
 parallel = true
+concurrency = [
+    "multiprocessing",
+    "thread",
+]
 omit = [
     "src/sliplib/__about__.py",
 ]
 
 [tool.coverage.paths]
-sliplib = ["src/sliplib", "*/SlipLib/src/sliplib"]
-tests = ["tests", "*/SlipLib/tests"]
+sliplib = ["src/sliplib"]
+tests = ["tests"]
 
 [tool.coverage.report]
 show_missing = true
@@ -112,6 +115,7 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
 ]
+fail_under = 100
 
 [tool.hatch.build.targets.sdist]
 include = [
@@ -136,5 +140,5 @@ line-length = 120
 profile = "black"
 line_length = 120
 
-[tool.ruff]
-target-version = "py312"
+[tool.mypy]
+python_version = "3.8"
