--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
 [tool.hatch.envs.test]
 extra-dependencies = [
     "coverage[toml]>=6.5",
+    "pytest-asyncio",
 ]
 
 [tool.hatch.envs.test.scripts]
@@ -142,3 +143,6 @@ line_length = 120
 
 [tool.mypy]
 python_version = "3.8"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
