--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 requires-python = ">=3.8"
@@ -32,7 +37,11 @@ dependencies = []
 "Source code" = "https://github.com/rhjdjong/SlipLib"
 
 [tool.hatch.version]
-path = "src/sliplib/version.py"
+path = "VERSION"
+#pattern = "VERSION = (?P<version>.*)$"
+
+[tool.hatch.build.targets]
+packages = ["src/sliplib"]
 
 [tool.hatch.envs.default]
 python = "3.12"
@@ -43,7 +52,7 @@ dependencies = [
 ]
 
 [[tool.hatch.envs.test.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
 [tool.hatch.envs.test]
 extra-dependencies = [
@@ -100,9 +109,6 @@ parallel = true
 concurrency = [
     "multiprocessing",
     "thread",
-]
-omit = [
-    "src/sliplib/__about__.py",
 ]
 
 [tool.coverage.paths]
