--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "sliplib"
-dynamic = ["version"]
+version = "0.6.3"
 description = "Slip package"
 readme = "README.rst"
 license = "MIT"
@@ -23,6 +23,11 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 requires-python = ">=3.8"
@@ -30,9 +35,6 @@ dependencies = []
 
 [project.urls]
 "Source code" = "https://github.com/rhjdjong/SlipLib"
-
-[tool.hatch.version]
-path = "src/sliplib/version.py"
 
 [tool.hatch.build.targets]
 packages = ["src/sliplib"]
@@ -46,7 +48,7 @@ dependencies = [
 ]
 
 [[tool.hatch.envs.test.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
 [tool.hatch.envs.test]
 extra-dependencies = [
@@ -103,9 +105,6 @@ parallel = true
 concurrency = [
     "multiprocessing",
     "thread",
-]
-omit = [
-    "src/sliplib/__about__.py",
 ]
 
 [tool.coverage.paths]
